<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterLogin.Login">

    <include layout="@layout/custom_action_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/logo_image_view"
                android:layout_centerHorizontal="true"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/default_color"
                android:src="@drawable/app_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/logo_image_view"
                android:id="@+id/welcome_text1"
                android:layout_centerHorizontal="true"
                android:text="@string/loginWelcomeText1"
                android:textStyle="bold"
                android:textSize="35sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/welcome_text1"
                android:id="@+id/welcome_text2"
                android:text="@string/loginWelcomeText12"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_layout"
                android:hint="@string/email"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/welcome_text2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_edit_text"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_layout"
                android:hint="@string/password"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/email_layout"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_edit_text"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="205dp"
                android:text="@string/forgotPassword"
                android:textSize="15sp"
                android:textColor="@color/blue_grey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgot_password_text"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/login_button"
                android:background="@drawable/button_layout"
                android:text="@string/loginButton"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/login_button"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noAccount"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/register_link_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:text="@string/registerText"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:textColor="@color/default_color"/>

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>