<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterLogin.Register">


    <include layout="@layout/custom_action_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/logo_image_view"
                android:layout_centerHorizontal="true"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/default_color"
                android:src="@drawable/app_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/logo_image_view"
                android:id="@+id/welcome_text"
                android:text="@string/signUpWelcomeText"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_text"
                android:id="@+id/fullname_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/fullName"
                app:hintTextColor="@color/default_color"
                app:startIconDrawable="@drawable/baseline_supervised_user_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fullname_edit_text"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_layout"
                android:hint="@string/email"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/fullname_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_edit_text"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nin_layout"
                android:hint="NIN Number"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/email_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/baseline_credit_card_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nin_edit_text"
                    android:textAllCaps="true"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_number_layout"
                android:hint="@string/phoneNumber"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/nin_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_edit_text"
                    android:inputType="phone|number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_layout"
                android:hint="@string/password"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/phone_number_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_edit_text"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_layout"
                android:hint="@string/confirmPassword"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password_edit_text"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usertype_layout"
                android:layout_below="@id/confirm_password_layout"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioGroupUserType"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/userTypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/normalType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driverRadioButton"
                        android:checked="true"
                        android:buttonTint="@color/default_color"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <View
                        android:layout_width="20dp"
                        android:layout_height="0dp" />

                    <RadioButton
                        android:id="@+id/ownerType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ownerRadioButton"
                        android:buttonTint="@color/default_color"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/usertype_layout"
                android:layout_centerHorizontal="true"
                android:id="@+id/register_button"
                android:background="@drawable/button_layout"
                android:text="@string/registerButton"
                android:textColor="@color/white"
                android:textSize="15sp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/register_button"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alreadyLogin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/login_link_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/signInText"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:textColor="@color/default_color"/>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>