<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterLogin.ForgotPassword">

    <include layout="@layout/custom_action_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/logo_image_view"
                android:layout_centerHorizontal="true"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/default_color"
                android:src="@drawable/app_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_image_view"
                android:id="@+id/reset_password_text"
                android:text="@string/forgotWelcomeText"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guide_email_text"
                android:layout_below="@id/reset_password_text"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/forgotGuidingText"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                app:shapeAppearance="@style/CutEdges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_layout"
                android:hint="@string/email"
                app:hintTextColor="@color/default_color"
                android:layout_below="@id/guide_email_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_edit_text"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/reset_password_button"
                android:layout_below="@+id/email_layout"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_layout"
                android:text="@string/forgotButton"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>